# AI-Chat

./: .gitignore  README.md  compose.yaml  makefile
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
frontend/: Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ChatContainer.jsx  ChatHeader.jsx  ChatInput.jsx  MessageList.jsx
frontend/src/hooks/: useChat.js
frontend/src/services/: api.js
